kustomizations/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/component: application
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/component: application
      annotations:
        checksum/config: "PLACEHOLDER" # Kustomize will replace this with configmap hash
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable@sha256:3e6710a7ab2a61311d9d899b719f6c3657791c63e8f4942cec4ebc42401d6b76
          ports:
            - name: mdns
              containerPort: 5353
              protocol: UDP
            - name: http
              containerPort: 8123
              protocol: TCP
            - name: homekit
              containerPort: 21064
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
